Enabled compact object headers