@@ -564,6 +564,7 @@ tasks.register('jpackageWin', Exec) {
             "--java-options", "-XX:+UseShenandoahGC",
             "--java-options", "-XX:ShenandoahGCHeuristics=compact",
             "--java-options", "-XX:ShenandoahAllocationThreshold=20",
+            "--java-options", "-XX:+UseCompactObjectHeaders",
             "--java-options", "--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED",
             "--java-options", "--add-exports=javafx.controls/com.sun.javafx.charts=ALL-UNNAMED",
             "--java-options", "--add-opens=javafx.graphics/javafx.geometry=ALL-UNNAMED"
@@ -593,6 +594,7 @@ tasks.register('jpackageDmg', Exec) {
             "--java-options", "-XX:+UseShenandoahGC",
             "--java-options", "-XX:ShenandoahGCHeuristics=compact",
             "--java-options", "-XX:ShenandoahAllocationThreshold=20",
+            "--java-options", "-XX:+UseCompactObjectHeaders",
             "--java-options", "--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED",
             "--java-options", "--add-exports=javafx.controls/com.sun.javafx.charts=ALL-UNNAMED",
             "--java-options", "--add-opens=javafx.graphics/javafx.geometry=ALL-UNNAMED",
@@ -627,6 +629,7 @@ tasks.register('jpackagePkg', Exec) {
             "--java-options", "-XX:+UseShenandoahGC",
             "--java-options", "-XX:ShenandoahGCHeuristics=compact",
             "--java-options", "-XX:ShenandoahAllocationThreshold=20",
+            "--java-options", "-XX:+UseCompactObjectHeaders",
             "--java-options", "--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED",
             "--java-options", "--add-exports=javafx.controls/com.sun.javafx.charts=ALL-UNNAMED",
             "--java-options", "--add-opens=javafx.graphics/javafx.geometry=ALL-UNNAMED",
@@ -663,6 +666,7 @@ tasks.register('jpackageDeb', Exec) {
             "--java-options", "-XX:+UseShenandoahGC",
             "--java-options", "-XX:ShenandoahGCHeuristics=compact",
             "--java-options", "-XX:ShenandoahAllocationThreshold=20",
+            "--java-options", "-XX:+UseCompactObjectHeaders",
             "--java-options", "--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED",
             "--java-options", "--add-exports=javafx.controls/com.sun.javafx.charts=ALL-UNNAMED",
             "--java-options", "--add-opens=javafx.graphics/javafx.geometry=ALL-UNNAMED",
@@ -708,6 +712,7 @@ tasks.register('jpackageRpm', Exec) {
             "--java-options", "-XX:+UseShenandoahGC",
             "--java-options", "-XX:ShenandoahGCHeuristics=compact",
             "--java-options", "-XX:ShenandoahAllocationThreshold=20",
+            "--java-options", "-XX:+UseCompactObjectHeaders",
             "--java-options", "--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED",
             "--java-options", "--add-exports=javafx.controls/com.sun.javafx.charts=ALL-UNNAMED",
             "--java-options", "--add-opens=javafx.graphics/javafx.geometry=ALL-UNNAMED",
